--- a/index.html
+++ b/index.html
@@ -1,11 +1,210 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Porfolio</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Work+Sans:ital,wght@0,100..900;1,100..900&display=swap"
+        rel="stylesheet">
+    <link rel="stylesheet" href="css/portfolio.css">
 </head>
-<body>
-    
+
+<body class="open-sans-normal">
+    <header class="bck-color" id="header">
+        <nav>
+            <h2 class="title">S<span class="Orng-color">i</span>f<span class="Orng-color">a</span>a<span
+                    class="Orng-color">t</span></h2>
+            <ul>
+                <li><a href="" class="Dark-2">portfolio</a></li>
+                <li><a href="" class="Dark-2">Blog</a></li>
+                <li><a href="" class="btn-main">Hire Me</a></li>
+            </ul>
+        </nav>
+        <div class="Section-full">
+            <div class="section-content">
+                <h4 class="section-greetings">Greetings, I am</h4>
+                <h1 class="section-title">Sifaat Khan</h1>
+                <p class="section-description">
+                    I’m a web developer passionate about building
+                    responsive, user-friendly websites and web apps. I
+                    specialize in HTML, CSS, JavaScript, and modern frameworks like React and Vue. From clean designs to
+                    smooth functionality, I love crafting digital experiences that work seamlessly across devices. Let’s
+                    build something great together!
+                </p>
+                <button class="btn-main">Download CV</button>
+                <button class="btn-header">Contact</button>
+            </div>
+            <img class="section-image" src="images/me.png" alt="a picture of myself">
+        </div>
+    </header>
+    <main>
+        <section class="about">
+            <div class="about-box">
+                <h3 class="about-title">About Me</h3>
+                <p class="about-discription">I, m a designer & developer with a passion for web design. I enjoy
+                    developing
+                    simple, clean and slick websites that provide real value to the end user. Thousands of clients have
+                    procured exceptional resulfs while working with me. Delivering work within time and budget which
+                    meets
+                    clients requirements in our mata.</p>
+                <div class="about-details">
+                    <div>
+                        <p class="about-items">Name:</p>
+                        <p class="about-info">Sifaat Khan</p>
+                    </div>
+                    <div>
+                        <p class="about-items">Email:</p>
+                        <p class="about-info">sifaatjim120@gmail.com</p>
+                    </div>
+                    <div>
+                        <p class="about-items">Date of Birth:</p>
+                        <p class="about-info">7 July 2001</p>
+                    </div>
+                    <div>
+                        <p class="about-items">From:</p>
+                        <p class="about-info">Dhaka, Bangladesh</p>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <!-- ( What I Do) Section Start -->
+        <section class="skills">
+            <div class="skills-info">
+                <h3 class="skills-title">What I Do</h3>
+                <p class="skills-description">I have more than 10 years experience building software for clients all
+                    over the world. Below is a quick overview of my main technical skill sets and technologies i use.
+                    Want to find out more about my experience? Check out my online resume and project portfolio.</p>
+            </div>
+            <div class="skill-container">
+                <div class="skill">
+                    <img src="images/icons/js.png" alt="">
+                    <p class="skill-header">Vanilla JavaScript</p>
+                    <p class="skill-brief">JavaScript is a scripting language that enables you to create dynamically
+                        updating content, control multimedia, animate images, and pretty much everything else</p>
+                </div>
+                <div class="skill">
+                    <img src="images/icons/react.png" alt="">
+                    <p class="skill-header">React</p>
+                    <p class="skill-brief">Although React is a library rather than a language, it is widely used in web
+                        development. The library first appeared in May 2013 and is now one of the most commonly used
+                        frontend libraries for web development</p>
+                </div>
+                <div class="skill">
+                    <img src="images/icons/nodejs.png" alt="">
+                    <p class="skill-header">Node.js</p>
+                    <p class="skill-brief">It is used for server-side programming, and primarily deployed for
+                        non-blocking, event-driven servers, such as traditional web sites and back-end API services, but
+                        was originally designed with real-time, push-based architectures in mind.</p>
+                </div>
+                <div class="skill">
+                    <img src="images/icons/mongo.png" alt="">
+                    <p class="skill-header">MongoDB</p>
+                    <p class="skill-brief">MongoDB is a powerful, open-source, NoSQL database that uses a
+                        document-oriented data model. It stores data in a flexible, BSON (Binary JSON) format, providing
+                        a scalable and efficient alternative to traditional relational database</p>
+                </div>
+            </div>
+        </section>
+        <!-- (resume) Section start -->
+        <section class="resume">
+            <h2 class="resume-title">A summery of My Resume</h2>
+            <div class="resume-container">
+                <div class="resume-column-1">
+                    <h3 class="resume-column-title">My Education</h3>
+                    <div class="resume-about">
+                        <h4 class="resume-about-title">Honours in Literature English</h4>
+                        <h5 class="resume-about-subtitle">National
+                            University / 2020 - Current</h5>
+                        <p class="resume-about-description">I hold an Honours degree in English Literature, where I
+                            developed strong analytical, critical thinking, and writing skills through the study of
+                            classic and contemporary literary works. My studies focused on literary theory, historical
+                            context, and textual analysis, fostering a deep understanding of language, culture, and
+                            storytelling</p>
+                    </div>
+                    <hr>
+                    <div class="resume-about">
+                        <h4 class="resume-about-title">Master in Computer Engineering</h4>
+                        <h5 class="resume-about-subtitle">Harvard University / 2015 - 2017</h5>
+                        <p class="resume-about-description">I earned a Master’s degree in Computer Engineering,
+                            specializing in the design, development, and optimization of hardware and software systems.
+                            My studies combined advanced topics in computer architecture, embedded systems, and software
+                            engineering, equipping me with practical and theoretical skills to solve complex
+                            technological challenges</p>
+                    </div>
+                    <hr>
+                    <div class="resume-about">
+                        <h4 class="resume-about-title">Master in Computer Engineering</h4>
+                        <h5 class="resume-about-subtitle">Harvard University / 2015 - 2017</h5>
+                        <p class="resume-about-description">I hold a Master’s degree in Computer Engineering from
+                            Harvard University, where I focused on advanced computing systems, embedded technologies,
+                            and software-hardware integration. The program sharpened my ability to engineer innovative
+                            solutions, blending rigorous academic research with real-world application in cutting-edge
+                            technology</p>
+                    </div>
+                </div>
+                <div class="resume-column-2">
+                    <h3 class="resume-column-title">My Experience</h3>
+                    <div class="resume-about">
+                        <h4 class="resume-about-title">Sr. Font End Developer</h4>
+                        <h5 class="resume-about-subtitle">Apple Inc / 2020 - Current</h5>
+                        <p class="resume-about-description">List skill/technologies here. You can change the icon above
+                            to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.
+                        </p>
+                    </div>
+                    <hr>
+                    <div class="resume-about">
+                        <h4 class="resume-about-title">Jr. Font End Developer</h4>
+                        <h5 class="resume-about-subtitle">Dribbble Inc / 2018 - 2022</h5>
+                        <p class="resume-about-description">List skill/technologies here. You can change the icon above
+                            to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.
+                        </p>
+                    </div>
+                    <hr>
+                    <div class="resume-about">
+                        <h4 class="resume-about-title">HTML Developer</h4>
+                        <h5 class="resume-about-subtitle">Adobe Inc / 2017 - 2018</h5>
+                        <p class="resume-about-description">List skill/technologies here. You can change the icon above
+                            to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.
+                        </p>
+                    </div>
+                </div>
+            </div>
+            <div class="btn-resume-div">
+                <button class="btn-resume">Download CV</button>
+            </div>
+        </section>
+    </main>
+    <footer>
+        <section id="footer">
+            <div class="footer-column">
+                <h3 class="footer-title">Lets Connect</h3>
+                <p class="footer-description">Please fill out the form on this section to contact with me or call between 9:00 A.M and 8.00 P.M ET,
+                    Monday through Friday.</p>
+                <div class=footer-icons>
+                    <a href=""><img src="images/icons/facebook.png" alt=""></a>
+                    <a href=""><img src="images/icons/insta.png" alt=""></a>
+
+                    <a href=""><img src="images/icons/twitter.png" alt=""></a>
+                </div>
+            </div>
+
+            <div class="footer-column">
+                <h3 class="footer-title">Let’s Message me</h3>
+                <form action="">
+                    <input type="text" name="" id="" placeholder="Your name">
+                    <input type="email" name="" id="" placeholder="Your email">
+                    <textarea name="" id="" cols="30" rows="15" placeholder="Message"></textarea>
+                    <input class="btn-footer" type="submit" value="Submit">
+                </form>
+            </div>
+        </section>
+
+    </footer>
+
 </body>
+
 </html>
